[package]
name = "room_build"
version = "0.1.0"
authors = ["Gerardo <heidel.gerardo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
sha2 = "0.7.1"
arrayref = "0.3.4"
serde = ""
serde_derive = ""
serde_json = ""
clap = ""
